# robotics-2037

./: .gitignore  CLAUDE.md  README.md  SOURCES.md  constraints.py  main.ipynb  main.py  metr.py  physical.py  pyproject.toml
tests/: test_constraints.py  test_metr.py  test_physical.py
